--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
         <ul class="index-header-list contact-header-list">
           <li class="contact-header-item">
             <a class="contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+              ><svg class="header-icon" width="16" height="12">
+                <use href="./img/symbol-defs.svg#icon-envelope"></use>
+              </svg>info@devstudio.com</a
             >
           </li>
           <li class="contact-header-item">
             <a class="contact-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+              ><svg class="header-icon" width="10" height="16">
+                <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -66,7 +70,11 @@
         <div class="container container-index-peculiarities">
           <ul class="index-list index-hero-list">
             <li class="index-list-item">
-              <div class="peculiarities-icon"></div>
+              <div class="peculiarities-icon">
+                <svg width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="index-content">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="index-description">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -74,7 +82,11 @@
               </p>
             </li>
             <li class="index-list-item">
-              <div class="peculiarities-icon"></div>
+              <div class="peculiarities-icon">
+                <svg width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="index-content">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="index-description">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -82,14 +94,22 @@
               </p>
             </li>
             <li class="index-list-item">
-              <div class="peculiarities-icon"></div>
+              <div class="peculiarities-icon">
+                <svg width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="index-content">ПЛАНУВАННЯ</h3>
               <p class="index-description">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="index-list-item">
-              <div class="peculiarities-icon"></div>
+              <div class="peculiarities-icon">
+                <svg width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="index-content">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="index-description">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -364,57 +384,59 @@
         <a class="footer-logo" href="">
           <span class="web-footer">Web</span>Studio
         </a>
-        <address class="address">
-          <ul class="index-list">
-            <li class="footer-item">
-              <a class="footer-address" href=""
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="footer-item">
-              <a class="footer-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-item">
-              <a class="footer-link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
-        <div class="container-footer-soc">
-          <h3 class="footer-soc-title">приєднуйтесь</h3>
-          <ul class="footer-soc-list">
-            <li class="footer-soc-item">
-              <a class="footer-soc-link" href="">
-                <svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-soc-item">
-              <a class="footer-soc-link" href="">
-                <svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-soc-item">
-              <a class="footer-soc-link" href="">
-                <svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-soc-item">
-              <a class="footer-soc-link" href="">
-                <svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="fotter-container-item">
+          <address class="address">
+            <ul class="index-list">
+              <li class="footer-item">
+                <a class="footer-address" href=""
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+          <div class="container-footer-soc">
+            <h3 class="footer-soc-title">приєднуйтесь</h3>
+            <ul class="footer-soc-list">
+              <li class="footer-soc-item">
+                <a class="footer-soc-link" href="">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a class="footer-soc-link" href="">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a class="footer-soc-link" href="">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a class="footer-soc-link" href="">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
