add shadow to porfolio, fix footer

--- a/index.html
+++ b/index.html
@@ -381,10 +381,10 @@
 
     <footer class="footer">
       <div class="container container-footer">
-        <a class="footer-logo" href="">
-          <span class="web-footer">Web</span>Studio
-        </a>
-        <div class="fotter-container-item">
+        <div class="footer-container-logo-address">
+          <a class="footer-logo" href="">
+            <span class="web-footer">Web</span>Studio
+          </a>
           <address class="address">
             <ul class="index-list">
               <li class="footer-item">
@@ -404,39 +404,39 @@
               </li>
             </ul>
           </address>
-          <div class="container-footer-soc">
-            <h3 class="footer-soc-title">приєднуйтесь</h3>
-            <ul class="footer-soc-list">
-              <li class="footer-soc-item">
-                <a class="footer-soc-link" href="">
-                  <svg class="footer-soc-icon" width="20" height="20">
-                    <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-soc-item">
-                <a class="footer-soc-link" href="">
-                  <svg class="footer-soc-icon" width="20" height="20">
-                    <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-soc-item">
-                <a class="footer-soc-link" href="">
-                  <svg class="footer-soc-icon" width="20" height="20">
-                    <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-soc-item">
-                <a class="footer-soc-link" href="">
-                  <svg class="footer-soc-icon" width="20" height="20">
-                    <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+        </div>
+        <div class="container-footer-soc">
+          <h3 class="footer-soc-title">приєднуйтесь</h3>
+          <ul class="footer-soc-list">
+            <li class="footer-soc-item">
+              <a class="footer-soc-link" href="">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link" href="">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link" href="">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link" href="">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
