--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
   </head>
   <body class="body">
     <header class="header header-portfolio">
-      <div class="container container-header container-header-portfolio">
+            <div class="container container-header container-header-index">
         <nav class="header-navigation">
           <a class="link-logo" href="index.html">
             <span class="web">Web</span>Studio
@@ -42,12 +42,16 @@
         <ul class="index-header-list contact-header-list">
           <li class="contact-header-item">
             <a class="contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+              ><svg class="header-icon" width="16" height="12">
+                <use href="./img/symbol-defs.svg#icon-envelope"></use>
+              </svg>info@devstudio.com</a
             >
           </li>
           <li class="contact-header-item">
             <a class="contact-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+              ><svg class="header-icon" width="10" height="16">
+                <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -76,112 +80,130 @@
           </ul>
           <ul class="portfolio-list portfolio-list-card">
             <li class="portfolio-hero-item">
-              <img
-                class="img"
-                src="./img/portfolio_img.jpg"
-                alt="laptop with website"
-                width="370"
-              />
-              <div class="hero-content-portfolio">
-                <h3 class="hero-content">Технокряк</h3>
-                <p class="hero-description">Веб-сайт</p>
-              </div>
+              <a class="portfolio-card-link" href="">
+                <img
+                  class="img"
+                  src="./img/portfolio_img.jpg"
+                  alt="laptop with website"
+                  width="370"
+                />
+                <div class="hero-content-portfolio">
+                  <h3 class="hero-content">Технокряк</h3>
+                  <p class="hero-description">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-hero-item">
-              <img
-                class="img"
-                src="./img/portfolio_img1.jpg"
-                alt="two basketball player"
-                width="370"
-              />
-              <div class="hero-content-portfolio">
-                <h3 class="hero-content">Постер New Orlean vs Golden Star</h3>
-                <p class="hero-description">Дизайн</p>
-              </div>
+              <a class="portfolio-card-link" href="">
+                <img
+                  class="img"
+                  src="./img/portfolio_img1.jpg"
+                  alt="two basketball player"
+                  width="370"
+                />
+                <div class="hero-content-portfolio">
+                  <h3 class="hero-content">Постер New Orlean vs Golden Star</h3>
+                  <p class="hero-description">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-hero-item">
-              <img
-                class="img"
-                src="./img/portfolio_img2.jpg"
-                alt="restaurant logo"
-                width="370"
-              />
-              <div class="hero-content-portfolio">
-                <h3 class="hero-content">Ресторан Seafood</h3>
-                <p class="hero-description">Додаток</p>
-              </div>
+              <a class="portfolio-card-link" href="">
+                <img
+                  class="img"
+                  src="./img/portfolio_img2.jpg"
+                  alt="restaurant logo"
+                  width="370"
+                />
+                <div class="hero-content-portfolio">
+                  <h3 class="hero-content">Ресторан Seafood</h3>
+                  <p class="hero-description">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-hero-item">
-              <img
-                class="img"
-                src="./img/portfolio_img3.jpg"
-                alt="black headphones"
-                width="370"
-              />
-              <div class="hero-content-portfolio">
-                <h3 class="hero-content">Проєкт Prime</h3>
-                <p class="hero-description">Маркетинг</p>
-              </div>
+              <a class="portfolio-card-link" href="">
+                <img
+                  class="img"
+                  src="./img/portfolio_img3.jpg"
+                  alt="black headphones"
+                  width="370"
+                />
+                <div class="hero-content-portfolio">
+                  <h3 class="hero-content">Проєкт Prime</h3>
+                  <p class="hero-description">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-hero-item">
-              <img
-                class="img"
-                src="./img/portfolio_img4.jpg"
-                alt="two boxes one white one black"
-                width="370"
-              />
-              <div class="hero-content-portfolio">
-                <h3 class="hero-content">Проєкт Boxes</h3>
-                <p class="hero-description">Додаток</p>
-              </div>
+              <a class="portfolio-card-link" href="">
+                <img
+                  class="img"
+                  src="./img/portfolio_img4.jpg"
+                  alt="two boxes one white one black"
+                  width="370"
+                />
+                <div class="hero-content-portfolio">
+                  <h3 class="hero-content">Проєкт Boxes</h3>
+                  <p class="hero-description">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-hero-item">
-              <img
-                class="img"
-                src="./img/portfolio_img5.jpg"
-                alt="monitor"
-                width="370"
-              />
-              <div class="hero-content-portfolio">
-                <h3 class="hero-content">Inspiration has no Borders</h3>
-                <p class="hero-description">Веб-сайт</p>
-              </div>
+              <a class="portfolio-card-link" href="">
+                <img
+                  class="img"
+                  src="./img/portfolio_img5.jpg"
+                  alt="monitor"
+                  width="370"
+                />
+                <div class="hero-content-portfolio">
+                  <h3 class="hero-content">Inspiration has no Borders</h3>
+                  <p class="hero-description">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-hero-item">
-              <img
-                class="img"
-                src="./img/portfolio_img6.jpg"
-                alt="magazine"
-                width="370"
-              />
-              <div class="hero-content-portfolio">
-                <h3 class="hero-content">Видання Limited Edition</h3>
-                <p class="hero-description">Дизайн</p>
-              </div>
+              <a class="portfolio-card-link" href="">
+                <img
+                  class="img"
+                  src="./img/portfolio_img6.jpg"
+                  alt="magazine"
+                  width="370"
+                />
+                <div class="hero-content-portfolio">
+                  <h3 class="hero-content">Видання Limited Edition</h3>
+                  <p class="hero-description">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-hero-item">
-              <img
-                class="img"
-                src="./img/portfolio_img7.jpg"
-                alt="token with the name lab"
-                width="370"
-              />
-              <div class="hero-content-portfolio">
-                <h3 class="hero-content">Проєкт LAB</h3>
-                <p class="hero-description">Маркетинг</p>
-              </div>
+              <a class="portfolio-card-link" href="">
+                <img
+                  class="img"
+                  src="./img/portfolio_img7.jpg"
+                  alt="token with the name lab"
+                  width="370"
+                />
+                <div class="hero-content-portfolio">
+                  <h3 class="hero-content">Проєкт LAB</h3>
+                  <p class="hero-description">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-hero-item">
-              <img
-                class="img"
-                src="./img/portfolio_img8.jpg"
-                alt="man working on laptop"
-                width="370"
-              />
-              <div class="hero-content-portfolio">
-                <h3 class="hero-content">Growing Business</h3>
-                <p class="hero-description">Додаток</p>
-              </div>
+              <a class="portfolio-card-link" href="">
+                <img
+                  class="img"
+                  src="./img/portfolio_img8.jpg"
+                  alt="man working on laptop"
+                  width="370"
+                />
+                <div class="hero-content-portfolio">
+                  <h3 class="hero-content">Growing Business</h3>
+                  <p class="hero-description">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -189,28 +211,63 @@
     </main>
     <footer class="footer">
       <div class="container container-footer">
-        <a class="footer-logo" href="">
-          <span class="web-footer">Web</span>Studio
-        </a>
-        <address class="address">
-          <ul class="index-list">
-            <li class="footer-item">
-              <a class="footer-address" href=""
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
+        <div class="footer-container-logo-address">
+          <a class="footer-logo" href="">
+            <span class="web-footer">Web</span>Studio
+          </a>
+          <address class="address">
+            <ul class="index-list">
+              <li class="footer-item">
+                <a class="footer-address" href=""
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="container-footer-soc">
+          <h3 class="footer-soc-title">приєднуйтесь</h3>
+          <ul class="footer-soc-list">
+            <li class="footer-soc-item">
+              <a class="footer-soc-link" href="">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a class="footer-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+            <li class="footer-soc-item">
+              <a class="footer-soc-link" href="">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a class="footer-link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="footer-soc-item">
+              <a class="footer-soc-link" href="">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link" href="">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
